Cleaning errorDescriptionForValue after r154839 https://bugs.webkit.org/show_bug.cgi?id=120531

Patch by Chris Curtis <chris_curtis@apple.com> on 2013-08-30
Reviewed by Darin Adler.

Changed the assert to ASSERT_NOT_REACHED, now that r154839 has landed. errorDescriptionForValue
can assert again that the parameterized JSValue is !isEmpty().

* runtime/ExceptionHelpers.cpp:
(JSC::errorDescriptionForValue):

Canonical link: https://commits.webkit.org/138520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154892 268f45cc-cd09-0410-ab3c-d52691b4dbfc